testdata/baselines/reference/fourslash/syntaxandSemanticDiagnostics/typeErrorAfterStringCompletionsInNestedCall2.baseline
// === Syntax and Semantic Diagnostics ===
/typeErrorAfterStringCompletionsInNestedCall2.tlua(41,5): error TLUA2322: Type '{ ({ event }: { event: { type: "FOO"; }; }): void; _out_TEvent?: { type: "BARx"; } | nil; }' is not assignable to type 'ActionFunction<{ type: "FOO"; }, { type: "FOO"; } | { type: "BAR"; }>'.
  Types of property '_out_TEvent' are incompatible.
    Type '{ type: "BARx"; } | nil' is not assignable to type '{ type: "FOO"; } | { type: "BAR"; } | nil'.
      Type '{ type: "BARx"; }' is not assignable to type '{ type: "FOO"; } | { type: "BAR"; } | nil'.
        Type '{ type: "BARx"; }' is not assignable to type '{ type: "FOO"; } | { type: "BAR"; }'.
          Type '{ type: "BARx"; }' is not assignable to type '{ type: "BAR"; }'.
            Types of property 'type' are incompatible.
              Type '"BARx"' is not assignable to type '"BAR"'.


==== /typeErrorAfterStringCompletionsInNestedCall2.tlua (1 errors) ====
    
    type ActionFunction<
      TExpressionEvent extends { type: string },
      out TEvent extends { type: string }
    > = {
      ({ event }: { event: TExpressionEvent }): void;
      _out_TEvent?: TEvent;
    };
    
    interface MachineConfig<TEvent extends { type: string }> {
      types: {
        events: TEvent;
      };
      on: {
        [K in TEvent["type"]]?: ActionFunction<
          Extract<TEvent, { type: K }>,
          TEvent
        >;
      };
    }
    
    declare function raise<
      TExpressionEvent extends { type: string },
      TEvent extends { type: string }
    >(
      resolve: ({ event }: { event: TExpressionEvent }) => TEvent
    ): {
      ({ event }: { event: TExpressionEvent }): void;
      _out_TEvent?: TEvent;
    };
    
    declare function createMachine<TEvent extends { type: string }>(
      config: MachineConfig<TEvent>
    ): void;
    
    createMachine({
      types = {
        events = {} as { type: "FOO" } | { type: "BAR" },
      },
      on = {
        FOO = raise(({ event }) => {
        ~~~
!!! error TLUA2322: Type '{ ({ event }: { event: { type: "FOO"; }; }): void; _out_TEvent?: { type: "BARx"; } | nil; }' is not assignable to type 'ActionFunction<{ type: "FOO"; }, { type: "FOO"; } | { type: "BAR"; }>'.
!!! error TLUA2322:   Types of property '_out_TEvent' are incompatible.
!!! error TLUA2322:     Type '{ type: "BARx"; } | nil' is not assignable to type '{ type: "FOO"; } | { type: "BAR"; } | nil'.
!!! error TLUA2322:       Type '{ type: "BARx"; }' is not assignable to type '{ type: "FOO"; } | { type: "BAR"; } | nil'.
!!! error TLUA2322:         Type '{ type: "BARx"; }' is not assignable to type '{ type: "FOO"; } | { type: "BAR"; }'.
!!! error TLUA2322:           Type '{ type: "BARx"; }' is not assignable to type '{ type: "BAR"; }'.
!!! error TLUA2322:             Types of property 'type' are incompatible.
!!! error TLUA2322:               Type '"BARx"' is not assignable to type '"BAR"'.
!!! related TLUA2322 /typeErrorAfterStringCompletionsInNestedCall2.tlua:14:7: The expected type comes from property 'FOO' which is declared here on type '{ BAR?: ActionFunction<{ type: "BAR"; }, { type: "FOO"; } | { type: "BAR"; }> | nil; FOO?: ActionFunction<{ type: "FOO"; }, { type: "FOO"; } | { type: "BAR"; }> | nil; }'
          return {
            type = "BARx" as const,
          };
        }),
      },
    });